--- a/lib/src/sass/_form.scss
+++ b/lib/src/sass/_form.scss
@@ -186,6 +186,7 @@ textarea
 	background:rgb(255,187,0); 	/* yellow */
 	background:#4bc9bd;
 	background:#ffa45a;			 		/* orange */
+	background:#00B3C8;
 }
 
 .button_lt:hover, .button:hover
