--- a/lib/prod/screen.css
+++ b/lib/prod/screen.css
@@ -758,15 +758,19 @@ header {
   position: fixed;
   top: 0;
   background: #292f33;
+  background: #00578a;
+  /* Orange */
+  background: #292f33;
   text-align: center !important;
   width: 100%;
   z-index: 110;
   padding: .5em; }
   header button {
     display: inline-block !important;
-    font-size: .75em;
+    font-size: 1em;
     width: auto;
-    margin-top: -.25em; }
+    margin-top: .25em;
+    margin-right: .25em; }
 
 main {
   background-image: linear-gradient(to right, #ecedf0 0%, #fafafa 8px);
@@ -785,7 +789,7 @@ aside {
   position: fixed;
   z-index: 100;
   left: 25%;
-  top: 2em;
+  top: 3.5em;
   font-size: 1em; }
   #tabs li {
     padding: 1.25em 1em 0.5em; }
@@ -866,7 +870,7 @@ canvas:hover {
   position: fixed;
   display: inline-block;
   right: 1em;
-  top: 5em;
+  top: 7em;
   padding: .25em;
   background: #3f4652;
   color: #fff;
@@ -1015,29 +1019,55 @@ ul#quickLinks li div[class^="icon-"], ul#quickLinks-temp li div[class^="icon-"]
   /* ===== 20em (320px) Red ====== #testing_phone {display:block}*/
   header {
     font-size: .8em;
-    padding: .75em;
-    /*
-    .cart 
-    { 
-    	display:block
-    };
-    [class^="icon-"] {font-size:1.8em};
-    .icon-unlocked {font-size:1.6em;padding-bottom:.2em}
-    */ }
+    padding: .75em; }
     header #header_logo {
-      height: 1.8em; } }
+      height: 3em; }
+    header #headerMessage {
+      margin: .75em;
+      float: left; }
+
+  /*
+  header 
+  {
+  	font-size:.8em;
+  	padding:.75em;
+  	#header_logo 
+  	{ 
+  		height:1.8em
+  	};
+  	/*
+  	.cart 
+  	{ 
+  		display:block
+  	};
+  	[class^="icon-"] {font-size:1.8em};
+  	.icon-unlocked {font-size:1.6em;padding-bottom:.2em}
+  	*/ }
 @media only screen and (min-width: 48em) {
   /* ======= 48em (768px) Green ======= 	#testing_phone {display:none}#testing_tablet {display:block} */
   header {
     font-size: 1em; } }
 @media only screen and (min-width: 56.25em) {
   /* ====== 56.25em (900px) dark blue ======= #testing_tablet {display:none}#testing_desktop {display:block}*/
-  header a, header img {
-    font-size: 1.2em; } }
+  /*
+  header a, header img 
+  {
+  	font-size:1.2em
+  }
+  */
+  header {
+    font-size: 1.2em;
+    padding: .5em; }
+    header #headerMessage {
+      margin: .75em; } }
 @media only screen and (min-width: 68.75em) {
   /* ======== 68.75em (1100px) light blue ======== #testing_desktop {display:none}#testing_desktop_lg {display:block } */
-  header a, header img {
-    font-size: 1.2em; } }
+  /*
+  header a, header img 
+  {
+  	font-size:1.2em
+  }
+  */ }
 /*=====================================*/
 /*=========== Form Elements ===========*/
 input[type="text"], textarea, select, button {
@@ -1193,7 +1223,8 @@ textarea {
   /* yellow */
   background: #4bc9bd;
   background: #ffa45a;
-  /* orange */ }
+  /* orange */
+  background: #00B3C8; }
 
 .button_lt:hover, .button:hover {
   /*background:#73b64a;*/
@@ -1739,8 +1770,8 @@ section {
 @font-face {
   /* ============ icons ================ */
   font-family: 'icomoon';
-  src: url("../fonts/icomoon.eot?h0icv5");
-  src: url("../fonts/icomoon.eot?#iefixh0icv5") format("embedded-opentype"), url("../fonts/icomoon.ttf?h0icv5") format("truetype"), url("../fonts/icomoon.svg?h0icv5#icomoon") format("svg");
+  src: url("../../assets/fonts/icomoon.eot?h0icv5");
+  src: url("../../assets/fonts/icomoon.eot?#iefixh0icv5") format("embedded-opentype"), url("../../assets/fonts/icomoon.ttf?h0icv5") format("truetype"), url("../../assets/fonts/icomoon.svg?h0icv5#icomoon") format("svg");
   font-weight: normal;
   font-style: normal; }
 [class^="icon-"], [class*=" icon-"] {
