--- a/lib/src/sass/_icons.scss
+++ b/lib/src/sass/_icons.scss
@@ -3,11 +3,11 @@
 
 @font-face {																						/* ============ icons ================ */
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?h0icv5');
-	src:url('../fonts/icomoon.eot?#iefixh0icv5') format('embedded-opentype'),
-		/* url('../fonts/icomoon.woff?h0icv5') format('woff'), */
-		url('../fonts/icomoon.ttf?h0icv5') format('truetype'),
-		url('../fonts/icomoon.svg?h0icv5#icomoon') format('svg');
+	src:url('../../assets/fonts/icomoon.eot?h0icv5');
+	src:url('../../assets/fonts/icomoon.eot?#iefixh0icv5') format('embedded-opentype'),
+		/* url('../../assets/fonts/icomoon.woff?h0icv5') format('woff'), */
+		url('../../assets/fonts/icomoon.ttf?h0icv5') format('truetype'),
+		url('../../assets/fonts/icomoon.svg?h0icv5#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
