--- a/lib/src/sass/_text.scss
+++ b/lib/src/sass/_text.scss
@@ -71,7 +71,7 @@ blockquote p
 .txt_red {color:red !important}
 .txt_sec_m {color:$sec_m !important}
 .txt_ntl_m {color:$ntl_m !important}
-.txt_fff {color:#fff !important}
+.txt-fff {color:#fff !important}
 
 .txt_shadow_dk
 { 
