--- a/lib/src/sass/_global.scss
+++ b/lib/src/sass/_global.scss
@@ -38,6 +38,12 @@ $red_d	:#f15755;
 $yellow_l	:#fdfae8;
 $yellow_m	:#f6d171;
 $yellow_d	:#999682;
+
+$aqua: #4bc9bd;
+$yellow: #ffbb00;
+$blue: #00B3C8;
+$orange: #ffa45a;
+
 $black 	:#000;
 $shadow: .50;
 
