--- a/lib/src/sass/_el.scss
+++ b/lib/src/sass/_el.scss
@@ -1,248 +1,4 @@
 
-.load_item p
-{
-	position:absolute;
-	font-family:"Open Sans", sans-serif;
-	font-weight:500; /* Light */
-	color:$ntl_l;
-}
-
-nav
-{
-	position:relative;
-	width: 100%;
-	@extend .txt-emboss;
-	font-size:.8em;
-	ul li:hover {
-		color:$ntl_l;
-	}
-	ul li a {
-		@extend .border_box;
-	}  
-}
-
-footer
-{															
-  position:relative;
-  height: auto;
-  text-align:left;
-  width: 100%;
-  background: $ntl_d;
-  color: #fff;
-}
-
-#to_top 
-{														
-	background:#fff;
-	font-size:1.1em;
-	@extend .round-sd_left;
-	@extend .box-shadow;
-	@extend .ease-sd;
-	padding-bottom:.5em;
-	padding-top:.4em;
-	position:fixed;
-	right:0;
-	bottom:1em;
-}
-
-menu
-{												/* ========== menus ========== */
-	min-width:100%;
-	background:#fff;
-	color:$ntl_d;
-	text-align:left;
-	position:absolute;
-	left:0;
-	z-index:105;
-	overflow:auto;
-	display:block;
-	@extend .box-shadow;
-	-webkit-backface-visibility: hidden
-}
-
-.title_nav 
-{
-	background:$prm_d;
-	height:2em;
-	padding:1em;
-	position:relative;
-}
-	
-.title_ntl 
-{													
-	background:$ntl_xl;
-	@extend .txt-emboss;
-	position:relative;
-	padding:1em ;
-	border-bottom:1px solid darken($ntl_xl,10%);
-}
-	
-.title_ntl_arrow 
-{
-	background:$ntl_m;
-	text-shadow: 0px 1px 1px $ntl_d;
-}
-
-.title_prm_arrow:after, .title_ntl_arrow:after
-{
-	 top: 100%;
-	 left:50%;
-	 border: solid transparent; 
-	 content: " "; 
-	 height: 0; 
-	 width: 0; 
-	 position: absolute; 
-	 pointer-events: none; 
-	 border-color: rgba(36, 48, 56, 0); 
-	 border-top-color:$prm_m; 
-	 border-width: 12px; 
-	 margin-left: -12px; 
-}
-
-.title_ntl_arrow:after 
-{
-	 border-top-color:$ntl_m; 
-}
-
-.block_prm_l 
-{
-	display:block;
-	background:$prm_l;
-	border-top:1px solid $prm_m;
-	border-bottom:1px solid $prm_m;
-	color:$prm_d
-}
-
-.block_sec_l a
-{
-	display:block;
-	text-align:center;
-	background:$sec_m;
-	padding:.5em;
-	@extend .txt-emboss_d;
-	border-top:1px solid $sec_m;
-	border-bottom:1px solid $sec_m;
-	color:#fff
-}
-
-#nav_lt, #nav_rt
-{
-	  position: absolute;
-	  background-color:rgba(0,0,0,.4);
-	  @extend .border_box;
-	  @extend .ease_fast;
-	  margin: auto;
-	  top: 0;
-	  left: 0;
-	  bottom: 0;
-	  right: 0;
-	  height: 3em;
-	  width: 3em;
-	  z-index: 5;
-}
-	
-#nav_lt
-{
-  right: auto;
-  @extend .round-sd_right;
-  left: 0 !important
-}
-	  
-#nav_lt:hover
-{
-		padding-left:.5em;
-		width:3.5em
-}
-	
-#nav_rt
-{
-  left: auto;
-  @extend .round-sd_left;
-  right: 0 !important
-}
-	  
-#nav_rt:hover 
-{
-	padding-right:.5em;
-	width:3.5em;
-}
-		
-.add_wrapper 
-{																	/* show cart add */
-	position:relative;
-	@extend .ease-sd;
-	overflow-y:hidden;
-	.add
-	{
-		@extend .ease-sd;
-		@extend .ease_slide;
-		position:absolute;
-		background-size:100%;
-		display:block;
-		top:1em;
-		right:-3em;
-		width:3em;
-		height:3em;
-		padding:.5em;
-		@extend .border_box;
-		z-index:10
-	}
-}
-
-#img_preview, .img_preview_wrapper 
-{																									
-	position:relative;
-}
-
-.img_wrapper
-{
-	background:#ddd;
-}
-
-.img_preview_hover 
-{
-	position:absolute;
-	width:100%;
-	height:100%;
-	left:0;
-	top:0;
-	background:#fff;
-	opacity:.8;
-}
-
-#img_list 
-{
-	overflow:auto;
-	overflow-x: hidden;
-}
-
-#img_preload, .hidden_div 
-{																							/* hack for google chrome */
-	position:fixed;
-	bottom:-500%;
-	right:-500%;
-	z-index:-200;
-	opacity:0;
-}
-	
-.label 
-{ 
-	pointer-events:none !important
-}
-
-.hover_block
-{																				/* ========== hover effects ========== */
-		background:$prm_d;
-		content: " ";
-		display:block;
-		width: 4px;
-		left:0;
-		bottom:0;
-		position: absolute;
-		height: 100%;
-		display:none;
-}
-
 body 
 {
 	font-size: 14px;
@@ -265,6 +21,7 @@ body
 header 
 {	
 	position:relative;
+	display: inline-block;
 	top:0;
 	background:$prm_d;
 	background:#00578a;		/* Orange */
@@ -286,6 +43,7 @@ header
 main 
 {
 	position: relative;
+	display: inline-block;
 	padding:1em 1em 2em 1em;
 	overflow:hidden;
 	-webkit-transition: all 100ms ease-in-out;
@@ -293,6 +51,9 @@ main
     -ms-transition: all 100ms ease-in-out;
     -o-transition: all 100ms ease-in-out;
     transition: all 100ms ease-in-out;
+    -webkit-box-sizing: border-box;														/* ========= tried applying to all but caused problems with clearfix ========= */
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 main:before, #canvas-loader:after
@@ -310,10 +71,25 @@ main:before, #canvas-loader:after
 
 aside 
 {
+	position: relative;
+	float:left;
+	display: inline-block;
 	background:#fff;
 	height:auto;
 	z-index: 100;
+    -webkit-box-sizing: border-box;														/* ========= tried applying to all but caused problems with clearfix ========= */
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
+
+/* For the scroll bar on the side panel */
+aside:hover 
+{
+	.jspDrag
+	{
+		opacity:1;
+	}
+};
 
 ul#tabs, ul#nav-pages
 {
@@ -322,7 +98,7 @@ ul#tabs, ul#nav-pages
 	z-index:100;
 	left:.5em;
 	top:0em;
-	font-size:1em;
+	font-size:.8em;
 	width:5em;
 	li
 	{
@@ -388,13 +164,10 @@ ul#nav-pages
 	overflow:scroll;
 }
 
-aside:hover 
+.slimScrollBar
 {
-	.jspDrag
-	{
-		opacity:1;
-	}
-};
+	cursor:pointer;
+}
 
 div[id^="assets"]
 {
@@ -405,11 +178,6 @@ div[id^="assets"]
 {
 	overflow: hidden !important;
 	padding-bottom:2em;
-}
-
-.slimScrollBar
-{
-	cursor:pointer;
 }
 
 .wrap-canvas 
@@ -451,7 +219,7 @@ div[id^="assets"]
 #canvas-loader, #aside-loader
 {
 	position:absolute;
-	background:#e1e4e7;;
+	background:#e1e4e7;
 	z-index:100;
 	opacity:1;
 	width: 100%;
@@ -481,7 +249,6 @@ div[id^="assets"]
 
 .canvas-container 
 {
-
 	position: absolute !important;
 	top:0;
 	bottom:0;
@@ -491,16 +258,10 @@ div[id^="assets"]
 	height:1px;
 	margin:auto;
 	cursor:pointer;
-	/*
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    transition: all .5s;
-    */
 	-webkit-box-shadow:0px 0px 6px 2px rgba(50,50,50,0.2);
 	-moz-box-shadow:0px 0px 6px 2px rgba(50,50,50,0.2);
 	box-shadow:0px 0px 6px 2px rgba(50,50,50,0.2);
 };
-
 
 .cropArea 
 {
@@ -572,10 +333,10 @@ div[id^="assets"]
 
 #palette
 {
-	position:fixed;
+	position:absolute;
 	display:inline-block;
-	right: 1em;
-	top: 7em;
+	right: .5em;
+	top: .5em;
 	padding:.25em;
 	background:#3f4652;
 	color:#fff;
@@ -676,23 +437,7 @@ aside a:hover
 {
 	color:#4bc9bd;
 }
-/*
-ul#quickLinks li, ul#quickLinks-temp li   
-{
-	width:33.33334%;
-	text-align:center !important;
-}
 
-ul#quickLinks li div[class^="icon-"], ul#quickLinks-temp li div[class^="icon-"]
-{
-	background:#4bc9bd;
-	color:#fff;
-	font-size:1.5em;	
-	padding:1em;
-	float:none;
-	text-align:center !important;
-}
-*/
 .quickLinks 
 {
 	float:none;
@@ -725,74 +470,10 @@ ul#quickLinks li div[class^="icon-"], ul#quickLinks-temp li div[class^="icon-"]
 	} 
 }
 
-.bounce
-{
-	-webkit-animation: bounce 1200ms ease;
-	-moz-animation: bounce 1200ms ease;
-	-o-animation: bounce 1200ms ease;
-	animation: bounce 1200ms ease;
-}
+/* RED 320px  */
 
-/* Bounce Key Frames */
-@-webkit-keyframes bounce
-{
-  0% {
-	-webkit-transform:translateY(0);
-  }
-  25% {
-	-webkit-transform:translateY(100%);
-  }
-  50% {
-	-webkit-transform:translateY(0);
-  }
-  75% {
-	-webkit-transform:translateY(50%);
-  }
-  100% {
-	-webkit-transform:translateY(0);
-  }
-}
+@media only screen and (min-width : 20em) {																	
 
-@-moz-keyframes bounce
-{
-  0% {
-	-moz-transform:translateY(0);
-  }
-  25% {
-	-moz-transform:translateY(100%);
-  }
-  50% {
-	-moz-transform:translateY(0);
-  }
-  75% {
-	-moz-transform:translateY(50%);
-  }
-  100% {
-	-moz-transform:translateY(0);
-  }
-}
-
-@keyframes bounce {
-  0% {
-    transform:translateY(0);
-  }
-  25% {
-    transform:translateY(100%);
-  }
-  50% {
-    transform:translateY(0%);
-  }
-  75% {
-    transform:translateY(50%);
-  }
-  100% {
-    transform:translateY(0%);
-  }
-}
-
-/*=======================================*/
-
-@media only screen and (min-width : 20em) {																	/* ===== 20em (320px) Red ====== #testing_phone {display:block}*/
 	header 
 	{
 		font-size:.8em;
@@ -807,40 +488,110 @@ ul#quickLinks li div[class^="icon-"], ul#quickLinks-temp li div[class^="icon-"]
 			float: left;
 		}
 	}
-	/*
-	header 
+
+	#warning-message-wrap
 	{
-		font-size:.8em;
-		padding:.75em;
-		#header_logo 
-		{ 
-			height:1.8em
-		};
-		/*
-		.cart 
-		{ 
-			display:block
-		};
-		[class^="icon-"] {font-size:1.8em};
-		.icon-unlocked {font-size:1.6em;padding-bottom:.2em}
-		*/
-	
+		display: block;
+	}
+
 }
 
-@media only screen and (min-width : 48em) {																/* ======= 48em (768px) Green ======= 	#testing_phone {display:none}#testing_tablet {display:block} */
+/*  GREEN 768px  */
+
+@media only screen and (min-width : 48em) {																
+	
 	header 
 	{ 
 		font-size:1em
+	};
+
+	aside
+	{
+		width:25%;
+		padding-top: .5em;
+		padding-bottom: .5em;
+		font-size: .8em;
+		.productImage
+		{
+			width:100%;
+		}
+		.productQty
+		{
+			display: inline-block;
+			float: left;
+			margin-bottom: .5em;
+		}
+		#export-aside
+		{
+			float: left;
+		}
+		#wrap-upload
+		{
+			font-size: .75em;
+		}
+	}
+
+	main
+	{
+		width:75%;
+	}
+	
+	#warning-message-wrap
+	{
+		display: none;
 	}
 }
 
-@media only screen and (min-width : 56.25em) {																/* ====== 56.25em (900px) dark blue ======= #testing_tablet {display:none}#testing_desktop {display:block}*/
-	/*
-	header a, header img 
+/* DARK BLUE 900px */
+
+@media only screen and (min-width : 56.25em) {																
+	
+	header  
 	{
-		font-size:1.2em
+		font-size:.9em;
+		padding: .5em;
+		#headerMessage
+		{
+			margin: .75em;
+		}
 	}
-	*/
+
+	aside
+	{
+		font-size: .8em;
+
+		.productQty
+		{
+			float: left;
+			margin-bottom: 0;
+		}	
+		#export-aside
+		{
+			float: right;
+		}
+		#wrap-upload
+		{
+			font-size: 1em;
+		}	
+	}
+
+	#orientationLinks
+	{
+		font-size: 1.1em;
+		li a 
+		{
+			padding-top:.25em;
+			padding-bottom: .25em;
+		}
+
+	}
+
+}
+
+/* LIGHT BLUE 1100px  */
+
+@media only screen and (min-width : 68.75em){																
+
 	header  
 	{
 		font-size:1.2em;
@@ -850,13 +601,25 @@ ul#quickLinks li div[class^="icon-"], ul#quickLinks-temp li div[class^="icon-"]
 			margin: .75em;
 		}
 	}
-}
 
-@media only screen and (min-width : 68.75em){																/* ======== 68.75em (1100px) light blue ======== #testing_desktop {display:none}#testing_desktop_lg {display:block } */
-	/*
-	header a, header img 
+	aside
 	{
-		font-size:1.2em
+		font-size: 1.1em;
+		.productImage
+		{
+			width:33%;
+		}
 	}
-	*/
+
+	#palette
+	{
+		right: 1em;
+		top: 1em;
+	}
+
+	ul#tabs, ul#nav-pages
+	{
+		font-size:1.1em;
+	}
+
 }
