--- a/lib/src/sass/_lists.scss
+++ b/lib/src/sass/_lists.scss
@@ -58,7 +58,7 @@ ul.assetList
 		border:4px solid #eaeaea;
 	};
 }
-
+/*
 ul.assetList li img
 {
 	@extend .ease-sd;	
@@ -71,7 +71,7 @@ ul.assetList li:hover
 		@extend .box-shadow;
 	};
 }
-
+*/
 ul#listSize
 {
 	padding-top:0;
@@ -98,13 +98,18 @@ ul#listSize
 	height:auto;
 }
 
-ul#listImages, ul#listTextThemes, ul#listThemes, ul#uploadedImages, ul#uploadedImages, ul#uploadedImages, 
+ul#listImages, ul#stockImages, ul#listTextThemes, ul#listThemes, ul#uploadedImages, ul#uploadedImages, ul#uploadedImages
 {
-	text-align:justify;
+	margin-left: -1%;
 	li
 	{
-		width:100%;
+		padding-left:1%;
 		padding-bottom:1%;
+		-webkit-box-sizing: border-box;														
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;		
+		display: inline-block;
+		float: left;
 	};
 	li img 
 	{
@@ -113,7 +118,10 @@ ul#listImages, ul#listTextThemes, ul#listThemes, ul#uploadedImages, ul#uploadedI
 	};
 }
 
-
+.img-col-50 
+{
+	width:49%;
+}
 
 /* RED 320px  */
 
@@ -135,34 +143,6 @@ ul#listImages, ul#listTextThemes, ul#listThemes, ul#uploadedImages, ul#uploadedI
 /* LIGHT BLUE 1100px  */
 
 @media only screen and (min-width : 68.75em){																
-
-	ul#listImages, ul#listTextThemes, ul#listThemes, ul#uploadedImages, ul#uploadedImages, ul#uploadedImages, 
-	{
-		text-align:justify;
-		li
-		{
-			width:48%;
-			padding:1%;
-		};
-		li img 
-		{
-			width:100%;
-			height:auto;
-			-webkit-transition: all .5 ease-in-out;
-			-moz-transition: all .5 ease-in-out;
-			-o-transition: all .5 ease-in-out;
-			transition: all .5 ease-in-out;			
-		};
-		li:hover
-		{
-			img
-			{
-				-webkit-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.75);
-				-moz-box-shadow:    0px 0px 6px 0px rgba(50, 50, 50, 0.75);
-				box-shadow:         0px 0px 6px 0px rgba(50, 50, 50, 0.75);
-			};
-		};
-	};
 
 }
 
