--- a/lib/prod/screen.css
+++ b/lib/prod/screen.css
@@ -329,7 +329,7 @@ img.border {
   -moz-box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 0px 0px 6px 0px rgba(50, 50, 50, 0.75); }
 
-.inner-shadow, #palette #colourContainer li span {
+.inner-shadow, #palette #colourContainer li a {
   -webkit-box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.28);
   -moz-box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.28);
   box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.28); }
@@ -755,7 +755,7 @@ div[id^="assets"] {
     -moz-box-shadow: 0px 0px 6px 2px rgba(25, 25, 25, 0.2);
     box-shadow: 0px 0px 6px 2px rgba(25, 25, 25, 0.2); }
 
-#canvas-loader, #aside-loader {
+#canvas-loader, #aside-loader, .loading {
   position: absolute;
   background: #e1e4e7;
   z-index: 100;
@@ -765,7 +765,7 @@ div[id^="assets"] {
   top: 0;
   left: 0;
   pointer-events: none; }
-  #canvas-loader span, #aside-loader span {
+  #canvas-loader span, #aside-loader span, .loading span {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -811,7 +811,7 @@ div[id^="assets"] {
   width: 100%;
   height: 100%;
   z-index: 200;
-  background: rgba(255, 255, 255, 0.8);
+  background: #fff;
   display: none; }
   #warning-message-wrap #warning-message {
     height: 200px;
@@ -940,14 +940,7 @@ aside a:hover {
   aside {
     font-size: 1.1em; }
     aside .productImage {
-      width: 33%; }
-
-  #palette {
-    right: 1em;
-    top: 1em; }
-
-  ul#tabs, ul#nav-pages {
-    font-size: 1.1em; } }
+      width: 33%; } }
 #palette {
   position: absolute;
   display: inline-block;
@@ -1004,18 +997,18 @@ aside a:hover {
     #palette li:hover ul li [class^="icon-"] {
       color: #fff; }
   #palette #colourContainer {
-    padding: .75em !important; }
+    width: 10em; }
     #palette #colourContainer li {
       width: 4em;
       height: 4em;
+      padding: .5em;
       -webkit-border-radius: 2em;
       -moz-border-radius: 2em;
       border-radius: 2em;
-      display: inline-block;
-      margin-bottom: 1em; }
-      #palette #colourContainer li span {
-        height: 4em;
-        width: 4em;
+      display: inline-block; }
+      #palette #colourContainer li a {
+        height: 3em;
+        width: 3em;
         display: block;
         -webkit-border-radius: 2em;
         -moz-border-radius: 2em;
@@ -1032,6 +1025,14 @@ aside a:hover {
   width: 0;
   height: 0; }
 
+/* LIGHT BLUE 1100px  */
+@media only screen and (min-width: 68.75em) {
+  #palette {
+    right: 1em;
+    top: 1em; }
+
+  ul#tabs, ul#nav-pages {
+    font-size: 1.1em; } }
 /*=====================================*/
 /*=========== Form Elements ===========*/
 input[type="text"], textarea, select, button {
@@ -1186,19 +1187,9 @@ textarea {
 
 .button_dk, .button_sd, .button {
   color: #fff;
-  background: #ffbb00;
-  /* yellow */
-  background: #4bc9bd;
-  background: #ffa45a;
-  /* orange */
   background: #00B3C8; }
 
 .button_lt:hover, .button:hover {
-  /*background:#73b64a;*/
-  /* background:#6caddf; */
-  /* blue */
-  /* background:#30BFB1;
-  background:#4BC3C9; */
   -webkit-box-shadow: inset 9px 11px 16px -14px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: inset 9px 11px 16px -14px rgba(0, 0, 0, 0.75);
   box-shadow: inset 9px 11px 16px -14px rgba(0, 0, 0, 0.75); }
@@ -1263,12 +1254,15 @@ button::-moz-focus-inner, select::-moz-focus-inner {
 .btn-orange {
   background: #ffa45a; }
 
-/*
-.btn-orange:hover
-{
-	background: #ef842d;
-}
-*/
+#changeTextTheme {
+  width: auto !important; }
+
+#changeTextTheme:hover {
+  color: #fff; }
+
+select:focus {
+  background: #f9f9f9; }
+
 @media only screen and (min-width: 20em) {
   /* ===== 20em (320px) Red ====== */ }
 @media only screen and (min-width: 48em) {
