--- a/lib/src/sass/_el.scss
+++ b/lib/src/sass/_el.scss
@@ -219,7 +219,7 @@ div[id^="assets"]
 	};
 }
 
-#canvas-loader, #aside-loader
+#canvas-loader, #aside-loader, .loading
 {
 	position:absolute;
 	background:#e1e4e7;
@@ -286,7 +286,7 @@ div[id^="assets"]
 	width:100%;
 	height:100%;
 	z-index: 200;
-	background: rgba(255,255,255, .8);
+	background: #fff;
 	display:none;
 	#warning-message
 	{
@@ -510,17 +510,6 @@ aside a:hover
 		{
 			width:33%;
 		}
-	}
-
-	#palette
-	{
-		right: 1em;
-		top: 1em;
-	}
-
-	ul#tabs, ul#nav-pages
-	{
-		font-size:1.1em;
 	}
 
 }
